@@ -147,6 +147,7 @@ Chronological list of authors
   - Andrea Rizzi
   - William Glass
   - Marcello Sega
+  - Nicholas Craven
 
 External code
 -------------
